[tool.poetry]
name = "efc"
version = "0.1.0"
description = "A scikit-learn compatible package of the Energy-based Flow Classifier."
authors = ["Manuela M. C. de Souza <munak98@hotmail.com>"]
license = "New BSD"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
Cython = "^0.29.32"
scikit-learn = "^1.1.3"
setuptools = "^65.6.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0", "Cython"]
build-backend = "poetry.core.masonry.api"
